# 2023_02_cst_323_introduction_to_earth_system_modelling

./: .gitignore  README.md
projects/fire_in_the_forest/: pyproject.toml
projects/fire_in_the_forest/data/: experiment-1-fT150.csv  experiment-1-ft150-step002.csv  experiment-1-limited-step001-ft150.csv  experiment-1-limited-step001.csv  experiment-1-limited-step005-ft150.csv  experiment-1-limited-step005.csv  experiment-1-tests-04-06.csv  experiment-1.csv  experiment-2-ft150.csv  experiment-2.csv  experiment-3-ft150.csv  experiment-3.csv  experiment-4-fT200.csv  experiment-4.csv  experiment-5-ft150.csv  resultado_original_dim20.csv  resultado_teste_dim100_rep50.csv  resultado_teste_dim50_rep50.csv  resultado_teste_dim50_rep50_step005.csv  resultado_teste_dim80_rep50_09_10.csv
projects/fire_in_the_forest/plots/: experiment.py  fire_in_the_forest_comp_step_resolution.ipynb  fire_in_the_forest_plots.ipynb
projects/fire_in_the_forest/src/: fire-average-modified.lua  fire-average.lua  fire-modified.lua  fire_original.lua  tests.lua
projects/practical_project/: pyproject.toml
projects/practical_project/mastorakos_et_al_2023/: fire_v1.lua  fire_v2.lua  simulation_without_wind.lua
projects/water_in_the_dam/: pyproject.toml
projects/water_in_the_dam/docs/: main.tex
projects/water_in_the_dam/plots/: water_in_dam_plots.ipynb  water_in_dam_preliminary_explorations.ipynb
projects/water_in_the_dam/src/: water_in_dam_v0.1.lua  water_in_dam_v0.1.tme  water_in_dam_v0.2.lua  water_in_dam_v0.2.tme  water_in_dam_v0.lua  water_in_dam_v0.tme  water_in_dam_v1.0.lua  (+2 more)
(+48 files in other folders)
