[tool.poetry]
name = "fire-in-the-forest"
version = "0.1.0"
description = ""
authors = ["Luiz Gabriel <luiz.gabriel.silva@usp.br>"]
readme = "README.md"
packages = [{include = "fire_in_the_forest"}, {include = "plots"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pandas = "^2.0.3"
matplotlib = "^3.7.2"
scipy = "^1.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
